# qft

./: .gitignore  .rustfmt.toml  COPYING  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
