[package]
name = "qft"
version = "0.7.2"
authors = ["Daniel H. github.com/tudbut", "github.com/pepa65"]
edition = "2021"
rust-version = "1.81.0"
description = "Quick File Transfer, true peer-to-peer over UDP"
repository = "https://github.com/pepa65/qft"
license = "GPL-3.0-or-later"
keywords = ["UDP", "file-transfer", "P2P"]
categories = ["command-line-utilities"]

[dependencies]
time = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = { level = "deny", priority = -1 }
unnecessary_wraps = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
#unwrap_used = "deny"
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "warn"
cast_precision_loss = "allow"
