[package]
name = "qft"
version = "0.7.27"
edition = "2024"
authors = ["github.com/pepa65", "Daniel H. github.com/tudbut"]
description = "Quick File Transfer, true peer-to-peer over UDP"
repository = "https://github.com/pepa65/qft"
documentation = "https://docs.rs/qft"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["UDP", "file-transfer", "P2P"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
time = "0.3.37"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = { level = "deny", priority = -1 }
unnecessary_wraps = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "warn"
cast_precision_loss = "allow"
